--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="returnback">Return</string>
     <string name="searchinfo">Search</string>
 
+<string name="menu_settings">Settings</string>
+    
+    <string name="scan_text">Plrease focus code bar/n in rect frame</string>
 </resources>
