--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -15,4 +15,11 @@
 	<string name="lend_date">借用日期</string>
 	<string name="imge_view_lend_user">此处应显示借用人签名</string>
 	<string name="people_name_change">根据AD自动搜索</string>
+	
+<!--  -->
+    <string name="one_export">一键导出</string>
+    <string name="model_import">型号导入</string>
+    <string name="user_import">用户导入</string>
+    <string name="lend_import">借用信息导入</string>
+    <string name="user_manage">型号/人员管理</string>
 </resources>
