--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -56,4 +56,10 @@
 	
 <string name="welcome1">WELCOME</string>
 <string name="welcome2">WELCOME</string>
+
+	<string name="icon1">Lend</string>
+	<string name="icon2">Return</string>
+	<string name="icon3">Search</string>
+	
+	<string name="MAIN">MAIN</string>
 </resources>
