add file explorer to select function for export/import

--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -31,8 +31,9 @@
     <string name="user_manage">型号/人员管理</string>
     
     <string name="import_success">导入成功</string>
-    <string name="import_Exception">插入数据库异常，请确认excel文件信息</string>
+    <string name="import_Exception">导入异常或空的excel，请检查excel文件</string>
     <string name="export_success">导出成功</string>
+    <string name="select_wrong_file">文件选择错误，请选择正确的文件导入：%s</string>
 	
 	<string name="model_name_manage">型号名：</string>
 	<string name="model_id">手机编号：</string>
