Add Remark for lendout

--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -50,4 +50,5 @@
 	<string name="icon2">返还</string>
 	<string name="icon3">查询</string>
 	<string name="MAIN">主页</string>
+	<string name="memo">备注</string>
 </resources>
