--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="imge_view_lend_user">It should display user signature</string>
    <string name="people_name_change">Search according to AD</string>
    
+<string name="memo">Remark</string>
+   
  
    
 <string name="employee_id">AD: </string>
