--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -40,7 +40,7 @@
 	<string name="update">添加</string>
 	<string name="cancel">取消</string>
 	
-	<string name="user_name_manage">性名：</string>
+	<string name="user_name_manage">姓名：</string>
 	<string name="user_email">邮箱：</string>	
 	
 	<string name="welcome1">型号管理</string>
