--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SM</string>
+    <string name="app_name">SAM</string>
 	<string name="app_name2">Manage</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
