Update lendout UI display

--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="model_name">Model Name</string>
     <string name="ad_id">AD ID</string>
     <string name="user_name">User Name</string>
-    <string name="expired_date">Expected Date</string>
+    <string name="expired_date">Return Date</string>
     <string name="sign">Signature</string>
     <string name="lend_save">Save</string>
     <string name="sign_info">Signature Information</string>
@@ -26,6 +26,8 @@
     <string name="othernote">Input phone id and click ok  if you can not scan it.</string>
     <string name="imge_view_lend_user">It should display user signature</string>
     <string name="people_name_change">Search according to AD</string>
+    <string name="model_name_change">Search according to phone ID</string>
+    <string name="return_date_input">Choose the return date</string>
     <string name="memo">Remark</string>
     <string name="employee_id">AD: </string>
     <string name="employee_name">Name: </string>
