--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -9,7 +9,7 @@
     <string name="model_name">型号名</string>
     <string name="ad_id">AD 账号</string>
     <string name="user_name">借用人</string>
-    <string name="expired_date">预计返还日期</string>
+    <string name="expired_date">预返还日期</string>
     <string name="sign">签名</string>
     <string name="lend_save">保存</string>
     <string name="sign_info">签名信息</string>
@@ -20,6 +20,7 @@
     <string name="othernote">如无法扫描请手动输入并点击ok</string>
     <string name="imge_view_lend_user">此处应显示借用人签名</string>
     <string name="people_name_change">根据AD自动搜索</string>
+    <string name="model_name_change">根据手机ID搜索</string>
     <string name="employee_name">姓名: </string>
 
     <!--  -->
