UI update ==long

--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -31,7 +31,7 @@
    <string name="people_name_change">Search according to AD</string>
    
 <string name="memo">Remark</string>
-   
+   <string name="Return_success">Return success</string>
  
    
 <string name="employee_id">AD: </string>
