--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -22,7 +22,8 @@
 	<string name="people_name_change">根据AD自动搜索</string>
 	
 <string name="employee_name">姓名: </string>
-	
+	 <string name="Return_success">归还成功</string>
+ 
 <!--  -->
     <string name="one_export">一键导出</string>
     <string name="model_import">型号导入</string>
