--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -6,6 +6,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">设置</string>
     <string name="phone_id">手机标识</string>
+    <string name="Return_warning1">   请先点击扫描或者OK</string>
+    <string name="Return_success">返还成功</string>
+    <string name="Return_warning2">找不到对应记录，请检查条码值是否正确</string>
  
 <!--  -->
     <string name="model_name">型号名</string>
