--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -11,15 +11,15 @@
     <string name="menu_settings">Settings</string>
     <string name="scan_text">Plrease focus code\nin rect frame</string>
     <string name="phone_id">Phone ID</string>
-    <string name="model_name">Model Name</string>
+    <string name="model_name">Model</string>
     <string name="ad_id">AD ID</string>
-    <string name="user_name">User Name</string>
-    <string name="expired_date">Return Date</string>
+    <string name="user_name">User</string>
+    <string name="expired_date">Re.Date</string>
     <string name="sign">Signature</string>
     <string name="lend_save">Save</string>
     <string name="sign_info">Signature Information</string>
     <string name="select_date_picker">Select Date</string>
-    <string name="lend_date">Lend Date</string>
+    <string name="lend_date">Le.Date</string>
     <string name="return_date">Return Date</string>
     <string name="doscan">scan</string>
     <string name="return_confirm">return confirm</string>
