--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="returnback">Return</string>
     <string name="searchinfo">Search</string>
     <string name="menu_settings">Settings</string>
-    <string name="scan_text">Plrease focus code\nin rect frame</string>
+    <string name="scan_text">Please focus code\nin rect frame</string>
     <string name="phone_id">Phone ID</string>
     <string name="model_name">Model</string>
     <string name="ad_id">AD ID</string>
