--- a/SampleManagement2/res/values/strings.xml
+++ b/SampleManagement2/res/values/strings.xml
@@ -28,6 +28,9 @@
        <string name="Return_success">Return success</string>
        <string name="Return_warning1">Please click scan or OK before click Return Confirm</string>
        <string name="Return_warning2">Can not find this record,please check phone id</string>
+       <string name="Sign_warning">Please Sign</string>
+       <string name="sign_clear"> CLEAR</string>
+       <string name="sign_ok"> OK</string>
 
 <!-- wjm -->
 
