--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -17,7 +17,7 @@
     <string name="model_name">型号名</string>
     <string name="ad_id">AD 账号</string>
     <string name="user_name">借用人</string>
-    <string name="expired_date">预返还日期</string>
+    <string name="expired_date">预还日期</string>
     <string name="sign">签名</string>
     <string name="lend_save">保存</string>
     <string name="sign_info">签名信息</string>
