--- a/SampleManagement2/res/values-zh-rCN/strings.xml
+++ b/SampleManagement2/res/values-zh-rCN/strings.xml
@@ -25,7 +25,7 @@
     <string name="return_date">归还日期</string>
     <string name="doscan">扫描</string>
     <string name="return_confirm">确定归还</string>
-    <string name="othernote">如无法扫描请手动输入并点击ok</string>
+    <string name="othernote">如无法扫描请手动输入并点击搜索</string>
     <string name="imge_view_lend_user">此处应显示借用人签名</string>
     <string name="people_name_change">根据AD自动搜索</string>
     <string name="model_name_change">根据手机ID搜索</string>
